fix(radio): add height and vertical-align
Add height and vertical-align to radio buttons so that radio buttons in list actions align correctly with the content. The added styles are already present in the checkbox component which does not have this issue.

--- a/src/radio/_radio.scss
+++ b/src/radio/_radio.scss
@@ -25,7 +25,10 @@
 
   display: inline-block;
 
+  vertical-align: middle;
+
   box-sizing: border-box;
+  height: $radio-label-height;
   margin: 0;
   padding-left: 0;
 
